--- a/JS/index.html
+++ b/JS/index.html
@@ -13,7 +13,11 @@
 <body>
     <h1>JavaSctipt</h1>
     <p>Hello world!</p>
-    <h1 id="time"><div id="min"></div> </h1>
+    <p>Input your year of birth</p><input id="human">
+    <br><br>
+    <p>Input year of car manufacture</p><input id="car">
+    <br><br>
+    <button onclick="print()">Confirm</button>
 </body>
 <script src="func1.js" type="text/javascript"></script>
 </html>
